--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <div class="container">
-      <header class="top-bar">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nam
-        velit, obcaecati no
-      </header>
+      <header class="space top-bar"></header>
+
       <main>
-        <div class="main-top"></div>
+        <div class="space main-top"></div>
+
         <div class="main-middle"></div>
-        <div class="main-bottom clearfix">
+
+        <div class="space main-bottom clearfix">
           <div class="side"></div>
           <div class="center"></div>
           <div class="side"></div>
